# piermux

./: .gitignore  CLAUDE.md  LICENSE  NOTES.md  README.md  README.zh-TW.md  SPEC.md  package-lock.json  package.json  pnpm-lock.yaml  release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.1.10.md  release-notes-v0.1.11.md  release-notes-v0.1.12.md  release-notes-v0.1.13.md  release-notes-v0.1.14.md  release-notes-v0.1.5.md  release-notes-v0.1.6.md  release-notes-v0.1.7.md  release-notes-v0.1.8.md  release-notes-v0.1.9.md
.cargo/: config.toml  config.toml.example
.claude/: mentor.yaml  settings.local.json
doc/: Android-OnDevice-Verify.md  SPEC.md  release-notes-v0.1.4.md  task.md
doc/Epic/: EPIC-001.md  EPIC-002.md  EPIC-004.md  README.md  epic-template.md
doc/Issue/: ISSUE-001.md  ISSUE-002.md  ISSUE-003.md  ISSUE-004.md  ISSUE-005.md  ISSUE-006.md  ISSUE-007.md  ISSUE-008.md  ISSUE-009.md  ISSUE-010.md  README.md  issue-template.md
doc/Sprint/: README.md  SPRINT-2026-W18.md  sprint-template.md
doc/Wiki/: README.md
doc/current_state/: ARCHITECTURE.md
scripts/: build-android-release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: attach.rs  capture.rs  commands.rs  host_keys.rs  hosts.rs  lib.rs  main.rs  messaging.rs  secret.rs  sessions.rs  sessions_mock.rs  ssh.rs
src/android/: AndroidApp.tsx  AndroidHostFormScreen.tsx  AttachScreen.tsx  HostListScreen.tsx  ModifierBar.tsx  QuickKeyBar.tsx  SessionListScreen.tsx  SessionScreen.tsx  SettingsScreen.tsx  useAndroidBack.ts  (+2 more)
(+30 files in other folders)
