[package]
name = "piermux"
version = "0.1.0"
description = "Cross-platform tmux session GUI — quick attach across multiple hosts"
authors = ["kirin"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "piermux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
