[package]
name = "piermux"
version = "0.1.2"
description = "Cross-platform tmux session GUI — quick attach across multiple hosts"
authors = ["kirin"]
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kirinchen/piermux"
homepage = "https://github.com/kirinchen/piermux"

[lib]
name = "piermux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.1", features = ["v4"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.1", features = ["full"] }
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
makiko = "0.2.5"
